src/test/deca/context/valid/provided/somme_float_int.deca
/*/ Description:
//    Programme faisant la somme entre un flottant et un entier
//
// Resultats: 6.1
//
// Historique:
//    cree le 01/01/2022*/

{
        float x = 3.0;
        int y = 3;
        println(x + y);
}
