src/test/deca/context/invalid/provided/declaration_variable_typeindf.deca
/*/ Description:
//    Programme qui utilise une variable ayant un type indéfini.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        toto x;
        int y;
}
